heading section done

--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
-    
+    <section class="section">
+        <header class="heading">
+            <h1>The creative crew</h1>
+            <div class="about">
+                <h2>Who we are</h2>
+                <p>
+                    We are team of creatively diverse.  driven.  innovative individuals working in various locations from the world.
+                </p>
+            </div>
+        </header>
+    </section>
 </body>
 </html>
