Team Desktop Version Done

--- a/index.html
+++ b/index.html
@@ -18,5 +18,56 @@
             </div>
         </header>
     </section>
+
+    <section class="team section">
+        <div class="div1 info">
+            <div class="about-me">
+                <img src="./images/photo1.png" alt="">
+                <div class="title">
+                    <p>Product owner</p>
+                </div>
+            </div>
+            <h3 class="name">Bill Mahoney</h3>
+        </div>
+
+        <div class="div2 info">
+            <div class="about2">
+                <img src="./images/photo2.png" alt="">
+                <p>Art director</p>
+            </div>
+            <h3 class="name">Saba Cabrera</h3>
+        </div>
+
+        <div class="div3 info">
+            <div class="about3">
+                <img src="./images/photo3.png" alt="">
+                <p>Tech Lead</p>
+            </div>
+            <h3 class="name">Shae Le</h3>
+        </div>
+
+        <div class="div4 info">
+            <div class="about4">
+                <img src="./images/photo4.png" alt="">
+                <p>UX Designer</p>
+            </div>
+            <h3 class="name">Skylah Lu</h3>
+        </div>
+
+        <div class="div5 info">
+            <div class="about5">
+                <img src="./images/photo5.png" alt="">
+                <p>Developer</p>
+            </div>
+            <h3 class="name">Griff Richards</h3>
+        </div>
+        <div class="div6 info">
+            <div class="about6">
+                <img src="./images/photo6.png" alt="">
+                <p>UI Designer</p>
+            </div>
+            <h3 class="name">Stan John</h3>
+        </div>
+    </section>
 </body>
 </html>
